integration/test-resources/network-policy/default-deny.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: policy-tester
spec:
  podSelector:
    matchLabels: {}
